# [tool.ruff]

# target-version = "py311"

# extend-select = [
#   "B",
#   "C",
#   "I",
#   "W",
# ]

# exclude = [
# 	"extensions",
# 	"extensions-disabled",
# ]

# ignore = [
# 	"E501", # Line too long
# 	"E721", # Do not compare types, use `isinstance`
# 	"E731", # Do not assign a `lambda` expression, use a `def`
	
# 	"I001", # Import block is un-sorted or un-formatted
# 	"C901", # Function is too complex
# 	"C408", # Rewrite as a literal
# 	"W605", # invalid escape sequence, messes with some docstrings
# ]

# [tool.ruff.per-file-ignores]
# "webui.py" = ["E402"]  # Module level import not at top of file

# [tool.ruff.flake8-bugbear]
# # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
# extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

# [tool.pytest.ini_options]
# base_url = "http://127.0.0.1:7860"

[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.1"
description = ""
authors = ["forked from https://github.com/AUTOMATIC1111", "oryon-dominik <oryon@cyberise.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.40"
accelerate = "^0.25.0"
pillow = "^10.2.0"
basicsr = "^1.4.2"
blendmodes = "^2023"
clean-fid = "^0.1.35"
einops = "^0.7.0"
fastapi = "^0.108.0"
gfpgan = "^1.3.8"
gradio = "^4.13.0"
inflection = "^0.5.1"
jsonmerge = "^1.9.2"
kornia = "^0.7.1"
lark = "^1.1.8"
numpy = "^1.26.3"
omegaconf = "^2.3.0"
open-clip-torch = "^2.23.0"
piexif = "^1.1.3"
psutil = "^5.9.7"
pytorch-lightning = "^2.1.3"
realesrgan = "^0.3.0"
requests = "^2.31.0"
resize-right = "^0.0.2"
safetensors = "^0.4.1"
scikit-image = "^0.22.0"
timm = "^0.9.12"
tomesd = "^0.1.3"
torch = "^2.1.2"
torchdiffeq = "^0.2.3"
torchsde = "^0.2.6"
transformers = "^4.36.2"
httpcore = "^1.0.2"
httpx = "^0.26.0"


[tool.poetry.group.test.dependencies]
pytest-base-url = "^2.0.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
